--- a/Exececios/ex022/fundo006.html
+++ b/Exececios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
@@ -13,10 +13,12 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
+        
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +29,7 @@
 <body>
     <main>
         <h1>Teste de Fundo </h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis praesentium quae cum, exercitationem velit minus ipsa ratione delectus voluptas, culpa dolorum aliquid? Ea quia necessitatibus magnam, dolores adipisci nesciunt id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error inventore laborum culpa rem commodi iusto voluptate fuga, magnam excepturi facilis numquam in adipisci eum consectetur optio hic vero eveniet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reiciendis, obcaecati magnam eos beatae perspiciatis tempore fugit autem voluptate? Nam, architecto. Provident repudiandae ipsum exercitationem autem qui. Autem, voluptates omnis.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis praesentium quae cum, exercitationem velit minus ipsa ratione delectus voluptas, culpa dolorum aliquid? Ea quia necessitatibus magnam, dolores adipisci nesciunt id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error inventore laborum culpa rem commodi iusto voluptate fuga, magnam excepturi facilis numquam in adipisci eum consectetur optio hic vero eveniet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reiciendis, obcaecati magnam eos beatae perspiciatis tempore fugit autem voluptate? Nam, architecto. Provident repudiandae ipsum exercitationem autem qui. Autem, voluptates omnis.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis praesentium quae cum, exercitationem velit minus ipsa ratione delectus voluptas, culpa dolorum aliquid? Ea quia necessitatibus magnam, dolores adipisci nesciunt id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error inventore laborum culpa rem commodi iusto voluptate fuga, magnam excepturi facilis numquam in adipisci eum consectetur optio hic vero eveniet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reiciendis, obcaecati magnam eos beatae perspiciatis tempore fugit autem voluptate? Nam, architecto. Provident repudiandae ipsum exercitationem autem qui. Autem, voluptates omnis.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis praesentium quae cum, exercitationem velit minus ipsa ratione delectus voluptas, culpa dolorum aliquid? Ea quia necessitatibus magnam, dolores adipisci nesciunt id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error inventore laborum culpa rem commodi iusto voluptate fuga, magnam excepturi facilis numquam in adipisci eum consectetur optio hic vero eveniet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reiciendis, obcaecati magnam eos beatae perspiciatis tempore fugit autem voluptate? Nam, architecto. Provident repudiandae ipsum exercitationem autem qui. Autem, voluptates omnis.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis praesentium quae cum, exercitationem velit minus ipsa ratione delectus voluptas, culpa dolorum aliquid? Ea quia necessitatibus magnam, dolores adipisci nesciunt id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error inventore laborum culpa rem commodi iusto voluptate fuga, magnam excepturi facilis numquam in adipisci eum consectetur optio hic vero eveniet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reiciendis, obcaecati magnam eos beatae perspiciatis tempore fugit autem voluptate? Nam, architecto. Provident repudiandae ipsum exercitationem autem qui. Autem, voluptates omnis.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis praesentium quae cum, exercitationem velit minus ipsa ratione delectus voluptas, culpa dolorum aliquid? Ea quia necessitatibus magnam, dolores adipisci nesciunt id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error inventore laborum culpa rem commodi iusto voluptate fuga, magnam excepturi facilis numquam in adipisci eum consectetur optio hic vero eveniet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reiciendis, obcaecati magnam eos beatae perspiciatis tempore fugit autem voluptate? Nam, architecto. Provident repudiandae ipsum exercitationem autem qui. Autem, voluptates omnis.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis praesentium quae cum, exercitationem velit minus ipsa ratione delectus voluptas, culpa dolorum aliquid? Ea quia necessitatibus magnam, dolores adipisci nesciunt id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque error inventore laborum culpa rem commodi iusto voluptate fuga, magnam excepturi facilis numquam in adipisci eum consectetur optio hic vero eveniet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime reiciendis, obcaecati magnam eos beatae perspiciatis tempore fugit autem voluptate? Nam, architecto. Provident repudiandae ipsum exercitationem autem qui. Autem, voluptates omnis.</p>
     </main>
 </body>
 </html>
