--- a/Exececios/ex023/tabela002.html
+++ b/Exececios/ex023/tabela002.html
@@ -9,17 +9,33 @@
             body {
                 font-family: Arial, Helvetica, sans-serif;
             }
+            caption {
+                font-size: 1.5em;
+                font-weight: bold;
+                padding: 10px;
+                background-color: lightgrey;
+            }
             table {
                 width: 500px;
                 border-collapse: collapse;
+                position: relative;
             }
             td, th {
                 border: 1px solid black;
                 padding: 10px;
             }
             thead, tfoot {
-                background-color: grey;
+                background-color: #808080;
                 color: white;
+            }
+            thead > tr > th {
+                position: sticky;
+                top: 0;
+                background-color: #808080;
+            }
+
+            tbody > tr:nth-child(2n) {
+                background-color: lightgray;
             }
             td.num {
                 text-align: right;
@@ -29,10 +45,11 @@
     <body>
         <h1>Uso de tabelas grandes</h1>
         <table>
+            <caption>População do Brasil</caption>
             <thead>
                 <tr>
-                    <th>Estado</th>
-                    <th>População</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col" style="width: 50px;">População</th>
                 </tr>
             </thead>
             <tbody>
@@ -48,13 +65,107 @@
                     <td>Rio de Janeiro</td>
                     <td class="num">17.264.943</td>
                 </tr>
+                <tr>
+                    <td>Brasilia</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Fortaleza</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                 <td>São Paulo</td>
+                    <td class="num">45.919.049</td>
+                </tr>
+                <tr>
+                    <td>Minas Gerais</td>
+                    <td class="num">21.198.791</td>
+                </tr>
+                <tr>
+                    <td>Rio de Janeiro</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Brasilia</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Fortaleza</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                 <td>São Paulo</td>
+                    <td class="num">45.919.049</td>
+                </tr>
+                <tr>
+                    <td>Minas Gerais</td>
+                    <td class="num">21.198.791</td>
+                </tr>
+                <tr>
+                    <td>Rio de Janeiro</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Brasilia</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Fortaleza</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                 <td>São Paulo</td>
+                    <td class="num">45.919.049</td>
+                </tr>
+                <tr>
+                    <td>Minas Gerais</td>
+                    <td class="num">21.198.791</td>
+                </tr>
+                <tr>
+                    <td>Rio de Janeiro</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Brasilia</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Fortaleza</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                 <td>São Paulo</td>
+                    <td class="num">45.919.049</td>
+                </tr>
+                <tr>
+                    <td>Minas Gerais</td>
+                    <td class="num">21.198.791</td>
+                </tr>
+                <tr>
+                    <td>Rio de Janeiro</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Brasilia</td>
+                    <td class="num">17.264.943</td>
+                </tr>
+                <tr>
+                    <td>Fortaleza</td>
+                    <td class="num">17.264.943</td>
+                </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <th>Total de habitantes</th>
+                    <th scope="row">Total de habitantes</th>
                     <td class="num"><strong>210.546.871</strong></td>
                 </tr>
             </tfoot>
         </table>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores nam facere accusantium molestiae, reiciendis nisi, repellat saepe porro doloremque totam ratione tenetur provident assumenda? Quam voluptatum architecto optio sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores modi vitae quibusdam accusamus iusto cum dicta sint perferendis architecto quo repudiandae, voluptas magni labore, omnis deleniti cumque dolor nam sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam expedita facilis possimus, veritatis inventore consectetur harum voluptate alias non laboriosam vero nam cupiditate architecto repellendus officiis quod quisquam molestiae sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eligendi ipsam alias quidem consequatur? Quaerat sit minima nam, ex obcaecati veniam recusandae. Molestias fuga aut facilis esse repellendus temporibus officia!</p>
     </body>
 </html>
